tdf#126242: Handle fractional values when subsetting CFF

Instead of truncating the values, write the fraction using “div” operator.

Change-Id: Ideff4ed3c9922a3ddd6c8aa0ec2733722ae722f6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139854
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>